--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,81 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+:root {
+    /* Primary */
+
+    --dark-cyan: hsl(158, 36%, 37%);
+    --cream: hsl(30, 38%, 92%);
+
+    /* Neutral */
+    --verydarkblue: hsl(212, 21%, 14%);
+    --dark-grayish-blue: hsl(228, 12%, 48%);
+    --white: hsl(0, 0%, 100%);
+}
+
+
+body {
+    background-color: var(--cream);
+}
+.card {
+    border: 1px solid red;
+    border-radius: 30px;
+    height: 70vh;
+    max-height: 80vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.image {
+    background-image: url("./images/image-product-mobile.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 30vh;
+    width: 100%;
+    background-color: red;
+}
+
+.info {
+    height: 70%;
+    background-color: var(--white);
+    display:flex;
+    flex-direction: column;
+
+}
+
+.info h1{
+    font-family: 'Fraunces', serif;
+}
+
+.info p {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+.perfume {
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: var(--dark-grayish-blue);
+}
+
+.boton {
+    background-color: var(--dark-cyan);
+    color: white;
+    display:flex;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+.precios {
+    display:flex;
+}
+.cart {
+    background-image: url("images/icon-cart.svg")
 }
