--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
     height: 100vh;
 }
 .card {
-    height: 70vh;
     max-height: 80vh;
     min-height: 230px;
     max-width: 90vw;
@@ -66,7 +65,6 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-grayish-blue);
     margin-bottom: 25px;
-    /*line-height: 2px;*/
 }
 
 #perfume {
@@ -106,10 +104,11 @@ body {
     display:flex;
     justify-content: center;
     font-family: 'Montserrat', sans-serif;
-    width: 95%;
-    padding: 10px;
+    width: 100%;
+    padding: 18px;
     border-radius: 10px;
     margin: 0 auto;
+    max-height: 6vh;
 }
 .cart {
     background-image: url("images/icon-cart.svg");
@@ -118,4 +117,5 @@ body {
     background-position: center;
     width: 15px;
     height: 15px;
+    margin-right: 10px;
 }
