--- a/desktop.css
+++ b/desktop.css
@@ -3,3 +3,49 @@
     margin: 0;
     padding: 0;
 }
+
+.card {
+    display: flex;
+    flex-direction: row;
+
+    margin: 0 auto;
+    height: 55%;
+    max-width: 40vw;
+}
+
+.image {
+    background-image: url("./images/image-product-desktop.jpg");
+    border-radius: 10px 0px 0px 10px;
+    min-height: 100%;
+    width: 50%;
+}
+
+.info {
+    width: 50%;
+    border-radius: 0 10px 10px 0;
+    height: 100%;
+    padding: 34px 58px 34px 38px;
+    display:grid;
+}
+
+.info h1 {
+    font-size: 40px;
+    line-height: 38px;
+}
+
+.info p {
+    font-size: 18px;
+    line-height: 25px;
+}
+
+#perfume {
+    font-size: 16px;
+}
+
+.precios p {
+    font-size: 38px;
+}
+
+#descuento {
+    font-size: 18px;
+}
